--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Deploy Project
 on: push
 jobs:
     test:
@@ -9,7 +9,7 @@ jobs:
             - name: Install NodeJS
               uses: actions/setup-node@v3
               with:
-                node-version: 18
+                node-version: 20
             - name: Install dependencies
               run: npm ci
             - name: Run tests
