--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
               uses: actions/setup-node@v3
               with:
                 node-version: 20
+            - name: Install dependencies
+              run: npm ci
             - name: Build project
               run: npm run build
             - name: Deploy project
